--- a/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepStatistics.xib
+++ b/OpticalValleyUnite/Classes/UI/Pedometer/View/YQStepStatistics.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -54,7 +55,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="步" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoU-AA-MZY">
-                        <rect key="frame" x="398" y="32" width="18" height="21"/>
+                        <rect key="frame" x="343" y="32" width="18" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="01G-FK-AwT"/>
                         </constraints>
@@ -63,23 +64,45 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SP3-gO-mPo">
-                        <rect key="frame" x="339" y="28" width="56" height="27.5"/>
+                        <rect key="frame" x="284" y="28" width="56" height="27.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                         <color key="textColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ce8-CR-Vfi">
+                        <rect key="frame" x="363" y="25" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="85w-9p-2qY"/>
+                            <constraint firstAttribute="height" constant="35" id="fdf-V0-R8D"/>
+                        </constraints>
+                        <state key="normal" image="组4"/>
+                        <connections>
+                            <action selector="helpButtonClick:" destination="raW-Zh-pre" eventType="touchUpInside" id="xVb-eI-59a"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3K7-vp-CXz">
+                        <rect key="frame" x="399" y="34" width="21" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="ZoU-AA-MZY" secondAttribute="trailing" constant="5" id="4dU-bl-UzD"/>
                     <constraint firstItem="pPk-ki-idu" firstAttribute="top" secondItem="j80-QC-wGd" secondAttribute="bottom" constant="5" id="6YA-CG-jWR"/>
                     <constraint firstItem="eTp-qK-whM" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" id="8Or-QA-bIF"/>
                     <constraint firstItem="qWi-CF-hS2" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" id="ESH-cN-wWq"/>
                     <constraint firstItem="pPk-ki-idu" firstAttribute="leading" secondItem="j80-QC-wGd" secondAttribute="leading" id="FHw-b3-hIg"/>
+                    <constraint firstItem="Ce8-CR-Vfi" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" id="FbQ-0e-jrF"/>
+                    <constraint firstItem="3K7-vp-CXz" firstAttribute="leading" secondItem="Ce8-CR-Vfi" secondAttribute="trailing" constant="1" id="G09-dY-PUY"/>
+                    <constraint firstAttribute="trailing" secondItem="3K7-vp-CXz" secondAttribute="trailing" constant="1" id="Nty-Y6-jk0"/>
                     <constraint firstItem="j80-QC-wGd" firstAttribute="top" secondItem="qWi-CF-hS2" secondAttribute="top" id="TUs-WB-pfP"/>
+                    <constraint firstItem="Ce8-CR-Vfi" firstAttribute="leading" secondItem="ZoU-AA-MZY" secondAttribute="trailing" constant="2" id="V3J-GC-Fkj"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Ce8-CR-Vfi" secondAttribute="trailing" constant="15" id="Yff-QS-VwC"/>
                     <constraint firstItem="qWi-CF-hS2" firstAttribute="leading" secondItem="eTp-qK-whM" secondAttribute="trailing" constant="10" id="dSW-Eg-YYG"/>
                     <constraint firstItem="eTp-qK-whM" firstAttribute="leading" secondItem="y4K-LF-OPW" secondAttribute="leading" constant="5" id="eQZ-h8-xCY"/>
                     <constraint firstItem="d9g-kf-8jt" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" constant="3" id="imH-WJ-MVn"/>
                     <constraint firstItem="j80-QC-wGd" firstAttribute="leading" secondItem="qWi-CF-hS2" secondAttribute="trailing" constant="14" id="ix1-TL-kWQ"/>
+                    <constraint firstItem="3K7-vp-CXz" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" id="j7Z-io-95Y"/>
                     <constraint firstItem="d9g-kf-8jt" firstAttribute="leading" secondItem="y4K-LF-OPW" secondAttribute="leading" constant="10" id="lgs-hj-aNT"/>
                     <constraint firstItem="ZoU-AA-MZY" firstAttribute="leading" secondItem="SP3-gO-mPo" secondAttribute="trailing" constant="3" id="pJG-HR-GGO"/>
                     <constraint firstItem="SP3-gO-mPo" firstAttribute="centerY" secondItem="y4K-LF-OPW" secondAttribute="centerY" id="qiM-Ue-JFA"/>
@@ -87,6 +110,8 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="helpButton" destination="Ce8-CR-Vfi" id="kzH-9E-vJL"/>
+                <outlet property="helpLabel" destination="3K7-vp-CXz" id="bIQ-cx-gK3"/>
                 <outlet property="indexHeadImageV" destination="eTp-qK-whM" id="qd3-cU-BVO"/>
                 <outlet property="indexLabel" destination="d9g-kf-8jt" id="6ER-Ag-wck"/>
                 <outlet property="stepTotallCountLabel" destination="SP3-gO-mPo" id="XHF-kC-u20"/>
@@ -97,4 +122,7 @@
             <point key="canvasLocation" x="51" y="-82"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="组4" width="13" height="16"/>
+    </resources>
 </document>
