--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoDrawerViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQVideoDrawerViewController.xib
@@ -1,20 +1,171 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQVideoDrawerViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQVideoDrawerViewController" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
+                <outlet property="patrolItemTagsView" destination="Wco-Lv-aTg" id="CMH-yL-abI"/>
+                <outlet property="patrolRouteTagsView" destination="TVk-ss-8wG" id="Wl2-Sv-yk0"/>
+                <outlet property="scrollContentView" destination="num-G9-Kxt" id="Bov-bB-HFa"/>
+                <outlet property="scrollView" destination="rCX-bT-ITr" id="s3h-C3-SeK"/>
+                <outlet property="searchBar" destination="rpk-EF-MeK" id="Gc2-aL-RSq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="237" height="622"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCX-bT-ITr">
+                    <rect key="frame" x="0.0" y="0.0" width="237" height="562"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="num-G9-Kxt">
+                            <rect key="frame" x="0.0" y="0.0" width="237" height="562"/>
+                            <subviews>
+                                <searchBar contentMode="redraw" placeholder="请输出巡查点" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rpk-EF-MeK">
+                                    <rect key="frame" x="0.0" y="20" width="237" height="60"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="60" id="nwH-eW-0wl"/>
+                                    </constraints>
+                                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                    <scopeButtonTitles>
+                                        <string>Title</string>
+                                        <string>Title</string>
+                                    </scopeButtonTitles>
+                                </searchBar>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bDK-F9-nDi">
+                                    <rect key="frame" x="0.0" y="82" width="237" height="65"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="巡查项查询" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHJ-XE-exF">
+                                            <rect key="frame" x="15" y="22" width="92" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="SHJ-XE-exF" firstAttribute="leading" secondItem="bDK-F9-nDi" secondAttribute="leading" constant="15" id="RK0-Jf-kRj"/>
+                                        <constraint firstAttribute="height" constant="65" id="T4S-z3-rdT"/>
+                                        <constraint firstItem="SHJ-XE-exF" firstAttribute="centerY" secondItem="bDK-F9-nDi" secondAttribute="centerY" id="nC3-Qo-Kby"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Rd-LO-9cv">
+                                    <rect key="frame" x="0.0" y="299" width="237" height="65"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="巡查路线选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGy-4c-c1C">
+                                            <rect key="frame" x="15" y="22.5" width="110.5" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="65" id="5FD-h0-bA6"/>
+                                        <constraint firstItem="IGy-4c-c1C" firstAttribute="centerY" secondItem="1Rd-LO-9cv" secondAttribute="centerY" id="aWJ-NZ-JHg"/>
+                                        <constraint firstItem="IGy-4c-c1C" firstAttribute="leading" secondItem="1Rd-LO-9cv" secondAttribute="leading" constant="15" id="wqQ-jB-EOF"/>
+                                    </constraints>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TVk-ss-8wG" customClass="RKTagsView">
+                                    <rect key="frame" x="0.0" y="365" width="237" height="197"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wco-Lv-aTg" customClass="RKTagsView">
+                                    <rect key="frame" x="0.0" y="148" width="237" height="150"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="150" id="epv-Nh-1f3"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstItem="1Rd-LO-9cv" firstAttribute="top" secondItem="Wco-Lv-aTg" secondAttribute="bottom" constant="1" id="3ln-6w-BP2"/>
+                                <constraint firstItem="rpk-EF-MeK" firstAttribute="leading" secondItem="num-G9-Kxt" secondAttribute="leading" id="5Fz-ma-Bn7"/>
+                                <constraint firstItem="rpk-EF-MeK" firstAttribute="top" secondItem="num-G9-Kxt" secondAttribute="top" constant="20" id="68N-yV-kVh"/>
+                                <constraint firstItem="bDK-F9-nDi" firstAttribute="leading" secondItem="num-G9-Kxt" secondAttribute="leading" id="6Nb-RT-VpZ"/>
+                                <constraint firstAttribute="trailing" secondItem="Wco-Lv-aTg" secondAttribute="trailing" id="6go-5g-9i2"/>
+                                <constraint firstItem="Wco-Lv-aTg" firstAttribute="leading" secondItem="num-G9-Kxt" secondAttribute="leading" id="D4N-AJ-V6O"/>
+                                <constraint firstItem="1Rd-LO-9cv" firstAttribute="leading" secondItem="num-G9-Kxt" secondAttribute="leading" id="ELt-7F-4Ym"/>
+                                <constraint firstAttribute="trailing" secondItem="rpk-EF-MeK" secondAttribute="trailing" id="ML2-tD-8SZ"/>
+                                <constraint firstItem="bDK-F9-nDi" firstAttribute="top" secondItem="rpk-EF-MeK" secondAttribute="bottom" constant="2" id="OLO-EH-5x0"/>
+                                <constraint firstAttribute="trailing" secondItem="1Rd-LO-9cv" secondAttribute="trailing" id="Ozd-vf-Y4L"/>
+                                <constraint firstAttribute="trailing" secondItem="TVk-ss-8wG" secondAttribute="trailing" id="b7n-IR-Yce"/>
+                                <constraint firstItem="TVk-ss-8wG" firstAttribute="leading" secondItem="num-G9-Kxt" secondAttribute="leading" id="eag-kj-SFO"/>
+                                <constraint firstItem="TVk-ss-8wG" firstAttribute="top" secondItem="1Rd-LO-9cv" secondAttribute="bottom" constant="1" id="gSS-g7-m2F"/>
+                                <constraint firstItem="Wco-Lv-aTg" firstAttribute="top" secondItem="bDK-F9-nDi" secondAttribute="bottom" constant="1" id="jVq-jy-xac"/>
+                                <constraint firstAttribute="trailing" secondItem="bDK-F9-nDi" secondAttribute="trailing" id="nIM-IN-eVL"/>
+                                <constraint firstAttribute="bottom" secondItem="TVk-ss-8wG" secondAttribute="bottom" id="wih-Xz-lPq"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="num-G9-Kxt" firstAttribute="leading" secondItem="rCX-bT-ITr" secondAttribute="leading" id="6i9-L1-nsl"/>
+                        <constraint firstItem="num-G9-Kxt" firstAttribute="centerX" secondItem="rCX-bT-ITr" secondAttribute="centerX" id="NOb-fF-jJn"/>
+                        <constraint firstAttribute="trailing" secondItem="num-G9-Kxt" secondAttribute="trailing" id="Nd1-8g-9oZ"/>
+                        <constraint firstAttribute="bottom" secondItem="num-G9-Kxt" secondAttribute="bottom" id="Zaq-1V-6dO"/>
+                        <constraint firstItem="num-G9-Kxt" firstAttribute="centerY" secondItem="rCX-bT-ITr" secondAttribute="centerY" id="gDK-uP-6Fl"/>
+                    </constraints>
+                </scrollView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5x-Ep-3en" userLabel="bottomView">
+                    <rect key="frame" x="0.0" y="562" width="237" height="60"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fjV-zf-Tde">
+                            <rect key="frame" x="0.0" y="0.0" width="118.5" height="60"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="重置">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="resetButtonClick:" destination="-1" eventType="touchUpInside" id="uFz-75-WKS"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gv3-0k-Xfh">
+                            <rect key="frame" x="118.5" y="0.0" width="118.5" height="60"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="完成">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="compeleteButtonClick:" destination="-1" eventType="touchUpInside" id="E6m-jg-uUm"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="Gv3-0k-Xfh" secondAttribute="trailing" id="FbV-Im-Lxg"/>
+                        <constraint firstItem="fjV-zf-Tde" firstAttribute="top" secondItem="b5x-Ep-3en" secondAttribute="top" id="LtU-gb-PSZ"/>
+                        <constraint firstItem="Gv3-0k-Xfh" firstAttribute="leading" secondItem="fjV-zf-Tde" secondAttribute="trailing" id="M8k-IH-P9Z"/>
+                        <constraint firstItem="Gv3-0k-Xfh" firstAttribute="top" secondItem="b5x-Ep-3en" secondAttribute="top" id="PsA-Bh-1tk"/>
+                        <constraint firstItem="fjV-zf-Tde" firstAttribute="leading" secondItem="b5x-Ep-3en" secondAttribute="leading" id="WPr-Lf-hFT"/>
+                        <constraint firstAttribute="bottom" secondItem="fjV-zf-Tde" secondAttribute="bottom" id="cAz-zj-4Na"/>
+                        <constraint firstAttribute="bottom" secondItem="Gv3-0k-Xfh" secondAttribute="bottom" id="qyM-0k-1PI"/>
+                        <constraint firstAttribute="height" constant="60" id="vuR-vJ-qL8"/>
+                        <constraint firstItem="Gv3-0k-Xfh" firstAttribute="width" secondItem="fjV-zf-Tde" secondAttribute="width" id="yq5-US-p87"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="rCX-bT-ITr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="5G0-c5-O14"/>
+                <constraint firstAttribute="bottom" secondItem="b5x-Ep-3en" secondAttribute="bottom" id="5lw-ZW-dcE"/>
+                <constraint firstAttribute="trailing" secondItem="b5x-Ep-3en" secondAttribute="trailing" id="Syh-Ev-eb1"/>
+                <constraint firstItem="num-G9-Kxt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="fPe-Aj-8l4"/>
+                <constraint firstItem="rCX-bT-ITr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="k8X-f2-edk"/>
+                <constraint firstItem="b5x-Ep-3en" firstAttribute="top" secondItem="rCX-bT-ITr" secondAttribute="bottom" id="s8K-pu-FkO"/>
+                <constraint firstItem="b5x-Ep-3en" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="v7k-6J-5Fn"/>
+                <constraint firstAttribute="trailing" secondItem="rCX-bT-ITr" secondAttribute="trailing" id="x6m-iR-b6I"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-97.5" y="29"/>
         </view>
     </objects>
 </document>
