--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
@@ -9,7 +9,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQPatrolItemWeatherViewController" customModule="OpticalValleyUnite" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQPatrolItemWeatherViewController" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <connections>
+                <outlet property="addImageButton" destination="6Fy-S3-2VB" id="ptk-0G-7r4"/>
+                <outlet property="addImageView" destination="yu6-pU-uOb" id="jZx-LE-CSg"/>
+                <outlet property="bottomView" destination="vNT-su-G4z" id="DZm-Kq-yDb"/>
+                <outlet property="descriptionLabel" destination="7xT-uY-ZHU" id="ELv-AV-F2o"/>
+                <outlet property="itemNumLabel" destination="qcK-xJ-W0a" id="CtT-ot-P58"/>
+                <outlet property="noButton" destination="ozK-c0-69o" id="MU0-Xf-lcQ"/>
+                <outlet property="patrolItemLabel" destination="B1z-Mx-Da9" id="3H7-Xw-26b"/>
+                <outlet property="patrolTypeLabel" destination="jGj-Ug-SNN" id="FtE-7c-M6s"/>
+                <outlet property="remarkView" destination="7B5-R8-qJr" id="MgH-yd-ZTW"/>
+                <outlet property="yesButton" destination="MQb-B0-WK8" id="Kn6-lg-rGi"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="IWs-2e-E8O">
             <rect key="frame" x="0.0" y="0.0" width="421" height="675"/>
@@ -139,7 +152,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ozK-c0-69o">
-                    <rect key="frame" x="180.5" y="318" width="18" height="18"/>
+                    <rect key="frame" x="181" y="318" width="18" height="18"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="18" id="0VB-v4-Btv"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="18" id="GXE-f7-tfc"/>
@@ -149,7 +162,7 @@
                     <state key="selected" image="ovalcheck"/>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="否" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rS8-r0-qyS">
-                    <rect key="frame" x="208" y="317" width="17.5" height="21"/>
+                    <rect key="frame" x="209" y="317" width="17.5" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -183,7 +196,7 @@
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vNT-su-G4z">
                     <rect key="frame" x="0.0" y="615" width="421" height="60"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.6044335461" green="0.88395986120000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="aoj-NO-DhY"/>
                     </constraints>
